[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-helpers"
version = "0.1.1"
description = "Reusable helper functions for AppSheet, Billit, and other integrations"
authors = [
  { name="Marc De Krock", email="you@example.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_helpers*"]

[project.urls]
Homepage = "https://github.com/yourorg/my-helpers"
